fix sidebar still being white in dark mode

--- a/theme.scss
+++ b/theme.scss
@@ -53,6 +53,11 @@ div.sidebar-item-container .sidebar-link>code {
   color: $red !important;
 }
 
+div.sidebar.sidebar-navigation.rollup.quarto-sidebar-toggle-contents,
+nav.sidebar.sidebar-navigation:not(.rollup) {
+    background-color: $white;
+}
+
 div.sidebar-item-container .active,
 div.sidebar-item-container .show>.nav-link,
 div.sidebar-item-container .sidebar-link>code {
